# devtools_scicomp_project_2025

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  pyproject.toml  requirements.txt  run_profile.py.lprof  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  usage.doctree
.github/workflows/: python-package.yml
_modules/: index.html
_modules/spin_sampler/: gibbs_steps.html  sampling.html  spin_systems.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  usage.rst.txt
docs/: api.rst  conf.py  index.rst  installation.rst  introduction.rst  modules.rst  usage.rst
experiments/: config.yaml  config_multi_chain.yaml  config_multi_couplings.yaml  config_numpy.yaml  config_single_chain.yaml  config_spambase.yaml  config_timing.yaml
logs/: data.pkl  numpy_knn_classifier.txt  profiling_mode_multi_chain.txt  profiling_mode_multi_couplings.txt  profiling_mode_single_chain.txt  slow_knn_classifier.txt  spam_numba_knn_classifier.txt
scripts/: plot_timing.py  run.py  run_profile.py  run_timing.py
shell/: submit.sh  submit_profile.sh  submit_spam.sh
src/pyclassify/: classifier.py  datamodule.py  model.py  module.py  utils.py
src/pyclassify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spin_sampler/: __init__.py  compile_gibbs.py  dispatch.py  gibbs_steps.py  (+3 more)
test/: test_.py  test_sampling.py  test_spin_systems.py
